Update Task - 1 Iris-Flowers-Classification-ML-Project.ipynb

--- a/Begineer Level/Task - 1 Iris-Flowers-Classification-ML-Project.ipynb
+++ b/Begineer Level/Task - 1 Iris-Flowers-Classification-ML-Project.ipynb
@@ -11,46 +11,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8356d3d",
-   "metadata": {},
-   "source": [
-  
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "2d29baf1",
    "metadata": {},
    "source": [
-    "### BEGINNER LEVEL TASK"
+    "### BEGINNER LEVEL"
    ]
   },
-  {
-   "cell_type": "markdown",
-   "id": "0a0397d1",
-   "metadata": {},
-   "source": [
-    "### TASK-1- Iris Flowers Classification ML Project :\n",
-    "\n",
-    
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a91640d5",
-   "metadata": {},
-   "source": [
-    
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fbf50c35",
-   "metadata": {},
-   "source": [
-    "##### Importing Libraries"
-   ]
-  },
+  
   {
    "cell_type": "code",
    "execution_count": 1,
@@ -652,14 +619,7 @@
     "df.describe()"
    ]
   },
-  {
-   "cell_type": "markdown",
-   "id": "54de802f",
-   "metadata": {},
-   "source": [
-    "## Data Visualisation"
-   ]
-  },
+
   {
    "cell_type": "code",
    "execution_count": 11,
@@ -860,14 +820,8 @@
     "plt.show()"
    ]
   },
-  {
-   "cell_type": "markdown",
-   "id": "7af4b29f",
-   "metadata": {},
-   "source": [
-    "# Building Model , Training and Testing"
-   ]
-  },
+  
+
   {
    "cell_type": "code",
    "execution_count": 16,
