Update Task - 1 Iris-Flowers-Classification-ML-Project.ipynb

--- a/Begineer Level/Task - 1 Iris-Flowers-Classification-ML-Project.ipynb
+++ b/Begineer Level/Task - 1 Iris-Flowers-Classification-ML-Project.ipynb
@@ -14,7 +14,7 @@
    "id": "2d29baf1",
    "metadata": {},
    "source": [
-    "### BEGINNER LEVEL TASK-1"
+    "### BEGINNER LEVEL"
    ]
   },
   
@@ -1094,8 +1094,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Nishant\\anaconda3\\lib\\site-packages\\sklearn\\utils\\deprecation.py:87: FutureWarning: Function plot_confusion_matrix is deprecated; Function `plot_confusion_matrix` is deprecated in 1.0 and will be removed in 1.2. Use one of the class methods: ConfusionMatrixDisplay.from_predictions or ConfusionMatrixDisplay.from_estimator.\n",
-      "  warnings.warn(msg, category=FutureWarning)\n"
+      
      ]
     },
     {
@@ -1148,8 +1147,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Nishant\\anaconda3\\lib\\site-packages\\sklearn\\svm\\_base.py:1206: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  warnings.warn(\n"
+      
      ]
     },
     {
@@ -1207,8 +1205,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Nishant\\anaconda3\\lib\\site-packages\\sklearn\\utils\\deprecation.py:87: FutureWarning: Function plot_confusion_matrix is deprecated; Function `plot_confusion_matrix` is deprecated in 1.0 and will be removed in 1.2. Use one of the class methods: ConfusionMatrixDisplay.from_predictions or ConfusionMatrixDisplay.from_estimator.\n",
-      "  warnings.warn(msg, category=FutureWarning)\n"
+     
      ]
     },
     {
@@ -1298,8 +1295,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Nishant\\anaconda3\\lib\\site-packages\\sklearn\\utils\\deprecation.py:87: FutureWarning: Function plot_confusion_matrix is deprecated; Function `plot_confusion_matrix` is deprecated in 1.0 and will be removed in 1.2. Use one of the class methods: ConfusionMatrixDisplay.from_predictions or ConfusionMatrixDisplay.from_estimator.\n",
-      "  warnings.warn(msg, category=FutureWarning)\n"
+      
      ]
     },
     {
@@ -1400,8 +1396,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Nishant\\anaconda3\\lib\\site-packages\\sklearn\\utils\\deprecation.py:87: FutureWarning: Function plot_confusion_matrix is deprecated; Function `plot_confusion_matrix` is deprecated in 1.0 and will be removed in 1.2. Use one of the class methods: ConfusionMatrixDisplay.from_predictions or ConfusionMatrixDisplay.from_estimator.\n",
-      "  warnings.warn(msg, category=FutureWarning)\n"
+    
      ]
     },
     {
@@ -1502,8 +1497,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Nishant\\anaconda3\\lib\\site-packages\\sklearn\\utils\\deprecation.py:87: FutureWarning: Function plot_confusion_matrix is deprecated; Function `plot_confusion_matrix` is deprecated in 1.0 and will be removed in 1.2. Use one of the class methods: ConfusionMatrixDisplay.from_predictions or ConfusionMatrixDisplay.from_estimator.\n",
-      "  warnings.warn(msg, category=FutureWarning)\n"
+      
      ]
     },
     {
