Update Task - 1 Iris-Flowers-Classification-ML-Project.ipynb

--- a/Begineer Level/Task - 1 Iris-Flowers-Classification-ML-Project.ipynb
+++ b/Begineer Level/Task - 1 Iris-Flowers-Classification-ML-Project.ipynb
@@ -14,7 +14,7 @@
    "id": "2d29baf1",
    "metadata": {},
    "source": [
-    "### BEGINNER LEVEL"
+    "### BEGINNER LEVEL TASK-1"
    ]
   },
   
@@ -1094,7 +1094,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      
      ]
     },
     {
@@ -1205,7 +1204,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-     
      ]
     },
     {
@@ -1295,7 +1293,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      
      ]
     },
     {
@@ -1396,7 +1393,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-    
      ]
     },
     {
@@ -1497,7 +1493,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      
      ]
     },
     {
