Update Task - 1 Iris-Flowers-Classification-ML-Project.ipynb

--- a/Begineer Level/Task - 1 Iris-Flowers-Classification-ML-Project.ipynb
+++ b/Begineer Level/Task - 1 Iris-Flowers-Classification-ML-Project.ipynb
@@ -11,13 +11,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d8356d3d",
+   "metadata": {},
+   "source": [
+    
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2d29baf1",
    "metadata": {},
    "source": [
     "### BEGINNER LEVEL TASK-1"
    ]
   },
-  
+  {
+   "cell_type": "markdown",
+   "id": "0a0397d1",
+   "metadata": {},
+   "source": [
+    "### TASK-1- Iris Flowers Classification ML Project :\n",
+    "\n",
+    
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a91640d5",
+   "metadata": {},
+   "source": [
+
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbf50c35",
+   "metadata": {},
+   "source": [
+    "##### Importing Libraries"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": 1,
@@ -619,7 +652,14 @@
     "df.describe()"
    ]
   },
-
+  {
+   "cell_type": "markdown",
+   "id": "54de802f",
+   "metadata": {},
+   "source": [
+    "## Data Visualisation"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": 11,
@@ -820,8 +860,14 @@
     "plt.show()"
    ]
   },
-  
-
+  {
+   "cell_type": "markdown",
+   "id": "7af4b29f",
+   "metadata": {},
+   "source": [
+    "# Building Model , Training and Testing"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": 16,
@@ -1092,8 +1138,9 @@
     },
     {
      "name": "stderr",
-     "output_type": "stream"
-     
+     "output_type": "stream",
+     "text": [
+     ]
     },
     {
      "data": {
@@ -1145,7 +1192,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      
      ]
     },
     {
@@ -1201,8 +1247,9 @@
     },
     {
      "name": "stderr",
-     "output_type": "stream"
-     
+     "output_type": "stream",
+     "text": [
+     ]
     },
     {
      "data": {
@@ -1289,8 +1336,9 @@
     },
     {
      "name": "stderr",
-     "output_type": "stream"
-     
+     "output_type": "stream",
+     "text": [
+     ]
     },
     {
      "data": {
@@ -1388,8 +1436,9 @@
     },
     {
      "name": "stderr",
-     "output_type": "stream"
-     
+     "output_type": "stream",
+     "text": [
+     ]
     },
     {
      "data": {
@@ -1487,8 +1536,9 @@
     },
     {
      "name": "stderr",
-     "output_type": "stream"
-     
+     "output_type": "stream",
+     "text": [
+     ]
     },
     {
      "data": {
