Update Task - 1 Iris-Flowers-Classification-ML-Project.ipynb

--- a/Begineer Level/Task - 1 Iris-Flowers-Classification-ML-Project.ipynb
+++ b/Begineer Level/Task - 1 Iris-Flowers-Classification-ML-Project.ipynb
@@ -22,7 +22,7 @@
    "id": "2d29baf1",
    "metadata": {},
    "source": [
-    "### BEGINNER LEVEL TASK-1"
+    "### BEGINNER LEVEL TASK"
    ]
   },
   {
