Update Task-2 Stock Market Prediction And Forecasting Using Stacked LSTM.ipynb

--- a/Begineer Level/Task-2 Stock Market Prediction And Forecasting Using Stacked LSTM.ipynb
+++ b/Begineer Level/Task-2 Stock Market Prediction And Forecasting Using Stacked LSTM.ipynb
@@ -22,10 +22,10 @@
         "id": "yCR8274psO_Q"
       },
       "source": [
-        "#Let's Grow More (LGMVIP) - "DATA SCIENCE INTERN"\n",
+        "# Data Science Intern at Let's Grow More LGMVIP Nov 21\n",
         "# Beginner Level Task\n",
-        "# Task-2 Stock Market Prediction And Forecasting Using Stacked LSTM\n",
-        "#Sachin Lohar\n",
+        "# Stock Market Prediction And Forecasting Using Stacked LSTM\n",
+        "# Sachin Lohar\n",
         "\n",
         "#Importing Libraries"
       ]
