--- a/Begineer Level/Task-2 Stock Market Prediction And Forecasting Using Stacked LSTM.ipynb
+++ b/Begineer Level/Task-2 Stock Market Prediction And Forecasting Using Stacked LSTM.ipynb
@@ -22,10 +22,10 @@
         "id": "yCR8274psO_Q"
       },
       "source": [
-        "# Data Science Intern at Let's Grow More LGMVIP Nov 21\n",
+        "#Let's Grow More (LGMVIP):  Data Science Intern \n LGMVIP June-22\n",
         "# Beginner Level Task\n",
-        "# Stock Market Prediction And Forecasting Using Stacked LSTM\n",
-        "# Sachin Lohar\n",
+        "#  TASK-2 Stock Market Prediction And Forecasting Using Stacked LSTM\n",
+       
         "\n",
         "#Importing Libraries"
       ]
