Update Task-2 Stock Market Prediction And Forecasting Using Stacked LSTM.ipynb

--- a/Begineer Level/Task-2 Stock Market Prediction And Forecasting Using Stacked LSTM.ipynb
+++ b/Begineer Level/Task-2 Stock Market Prediction And Forecasting Using Stacked LSTM.ipynb
@@ -22,7 +22,8 @@
         "id": "yCR8274psO_Q"
       },
       "source": [
-        "#Let's Grow More (LGMVIP):  Data Science Intern \n LGMVIP June-22\n",
+        "#Let's Grow More (LGMVIP):  Data Science Intern  \n",
+        "# LGMVIP June-22\n",
         "# Beginner Level Task\n",
         "#  TASK-2 Stock Market Prediction And Forecasting Using Stacked LSTM\n",
        
